# -Neural_Networks_from_Scratch_sentdex

./: P.5_Hidden_Layer_Activation_Functions.ipynb  p1._intro.ipynb  p2_coding_a_layer.ipynb  p3._The_Dot_product.ipynb  p4._Batches_layers_and_obj.ipynb  pyproject.toml
